# rust-music-player

./: Cargo.toml  README.md
src/: app.rs  list.rs  main.rs  tui.rs  ui.rs  update.rs
