[package]
name = "rust-music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
log = "0.4.20"
ratatui = "0.24.0"
rodio = "0.17.3"
youtube_dl = "0.9.0"
